# btcmini

./: .gitignore  01_crypto.ipynb  02_script_and_tx.ipynb  README.md  btc.py  pyproject.toml
tests/: test_block_pow.py  test_chain.py  test_crypto_keys.py  test_mempool.py  test_script.py  test_tx.py  test_utxo.py
