[project]
name = "btcmini"
version = "0.1.0"
description = "A minimal Bitcoin in one file. Legacy P2PKH only."
requires-python = ">=3.14"
dependencies = [
    "base58>=2.1.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ipykernel>=6.29",
    "matplotlib>=3.9",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# F = pyflakes (unused imports/vars), I = isort (import order/dedup),
# UP = pyupgrade (modernize syntax).
select = ["F", "I", "UP"]
